// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainMenuSearch should be rendered correctly 1`] = `
<div
  className="container uui-input-box -clickable searchInput"
  onFocus={[Function]}
  tabIndex={-1}
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
  <input
    className="uui-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    type="text"
    value=""
  />
</div>
`;

exports[`MainMenuSearch should be rendered correctly 2`] = `
<div
  className="container uui-input-box -clickable searchInput"
  onFocus={[Function]}
  tabIndex={-1}
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
  <input
    className="uui-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    type="primary"
    value="test"
  />
</div>
`;
